implement google sso

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta
+<!--     <meta
       http-equiv="Content-Security-Policy"
       content="
         connect-src * https://api.stripe.com;
@@ -17,7 +17,7 @@
         script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com;
         object-src 'none';
      "
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
