--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Bianxi"
     />
 <!--     <meta
       http-equiv="Content-Security-Policy"
@@ -34,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KATM</title>
+    <title>BianxiStore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
